src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Install_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Location</label>
        <referenceTo>Install_Location__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Quoteline_assignedto__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Assigned User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>assignedtoQuotelines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__Quoteline_labseq__c</fullName>
        <label>Labor Sequence Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__Quoteline_rstype__c</fullName>
        <label>Rootstock Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Labor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Material</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rstk__Quoteline_sfprodid__c</fullName>
        <label>SF Product ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__Quoteline_sfprodname__c</fullName>
        <label>SF Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__quoteline_iccomcod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory Commodity Code</description>
        <label>Inventory Commodity Code</label>
        <referenceTo>rstk__iccomcod__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>quotelines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__quoteline_pricesrce__c</fullName>
        <description>Price Source</description>
        <label>Price Source</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__quoteline_rsprice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Priced From Rootstock</description>
        <label>Priced From Rootstock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__quoteline_socomm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Group</label>
        <referenceTo>rstk__socomm__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>quotelines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>